# acl_tool

./: CMakeLists.txt  README.md  acl_tool.cpp  build.bat  common.cpp  common.h  event_operations.cpp  event_operations.h  file_operations.cpp  file_operations.h  privilege_guard.h  process_operations.cpp  process_operations.h  service_operations.cpp  service_operations.h
